# streamable-py

./: .gitignore  DOCS.md  LICENSE  MANIFEST.in  README.md  clean.py  pyproject.toml
.github/workflows/: build.yml  docs.yml  format.yml
scripts/: clean.py  keywords.py
src/: __init__.py
src/api/: __init__.py  client.py  exceptions.py  models.py
src/lib/api/: __init__.py  client.py  exceptions.py  models.py
src/lib/requests/: __init__.py  client.py  models.py
src/lib/utils/: __init__.py
src/streamable/: __init__.py
src/streamable/api/: __init__.py  client.py  exceptions.py  models.py
src/streamable/utils/: __init__.py  s3.py
src/utils/: __init__.py  s3.py
