[project]
name = "streamable-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
]

[tool.uv.workspace]
members = [
    ".",
]

[dependency-groups]
dev = []
